--- a/web/html/composer.json
+++ b/web/html/composer.json
@@ -9,7 +9,8 @@
       }
   ],
   "require": {
-    "phpmailer/phpmailer": "^6.8.1"
+    "phpmailer/phpmailer": "^6.8.1",
+    "jfcherng/php-diff" : "^6.16"
   },
   "autoload": {
     "psr-4": {"metadata\\": "src"}
